hard-gists/2660685/run.log
=== Docker Run Log for 2660685 ===
Started at: Mi 29. Okt 13:11:23 CET 2025

[2025-10-29 13:11:24] START: Running container for 2660685
[2025-10-29 13:11:24] SUCCESS: Container cbf51c8f55ae5a51f1ce46c234b6d77e3b91991817c194a5c63a66a7b0a41d3a started for 2660685
=== Container logs for 2660685 ===
  File "/snippet.py", line 15
    print locus_tag
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2660685 ===
[2025-10-29 13:11:26] INFO: Container cbf51c8f55ae5a51f1ce46c234b6d77e3b91991817c194a5c63a66a7b0a41d3a has stopped
